# Copyright (C) 2017 Bloomberg L.P. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions
# are met:
# 1. Redistributions of source code must retain the above copyright
#    notice, this list of conditions and the following disclaimer.
# 2. Redistributions in binary form must reproduce the above copyright
#    notice, this list of conditions and the following disclaimer in the
#    documentation and/or other materials provided with the distribution.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
# A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
# OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
# LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
# DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
# THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

static_library("chrome_blpwtk2") {
  include_dirs = [
    ".",
    "//breakpad/src",
  ]

  sources = [
    "//chrome/browser/printing/pdf_to_emf_converter.cc",
    "//chrome/browser/printing/pdf_to_emf_converter.h",
    "//chrome/browser/printing/print_job.cc",
    "//chrome/browser/printing/print_job.h",
    "//chrome/browser/printing/print_job_manager.cc",
    "//chrome/browser/printing/print_job_manager.h",
    "//chrome/browser/printing/print_job_worker.cc",
    "//chrome/browser/printing/print_job_worker.h",
    "//chrome/browser/printing/print_job_worker_owner.cc",
    "//chrome/browser/printing/print_job_worker_owner.h",
    "//chrome/browser/printing/print_view_manager.cc",
    "//chrome/browser/printing/print_view_manager.h",
    "//chrome/browser/printing/print_view_manager_base.cc",
    "//chrome/browser/printing/print_view_manager_base.h",
    "//chrome/browser/printing/print_view_manager_observer.h",
    "//chrome/browser/printing/printer_manager_dialog.h",
    "//chrome/browser/printing/printer_manager_dialog_win.cc",
    "//chrome/browser/printing/printer_query.cc",
    "//chrome/browser/printing/printer_query.h",
    "//chrome/browser/printing/printing_message_filter.cc",
    "//chrome/browser/printing/printing_message_filter.h",
    "//chrome/browser/spellchecker/spellcheck_dictionary.h",
    "//chrome/browser/spellchecker/spellcheck_factory.cc",
    "//chrome/browser/spellchecker/spellcheck_factory.h",
    "//chrome/browser/spellchecker/spellcheck_host_metrics.cc",
    "//chrome/browser/spellchecker/spellcheck_host_metrics.h",
    "//chrome/browser/spellchecker/spellcheck_hunspell_dictionary.cc",
    "//chrome/browser/spellchecker/spellcheck_hunspell_dictionary.h",
    "//chrome/browser/spellchecker/spellcheck_message_filter.cc",
    "//chrome/browser/spellchecker/spellcheck_message_filter.h",
    "//chrome/browser/spellchecker/spellcheck_service.cc",
    "//chrome/browser/spellchecker/spellcheck_service.h",
    "//chrome/browser/spellchecker/spelling_service_client.cc",
    "//chrome/browser/spellchecker/spelling_service_client.h",
    "//chrome/common/crash_keys.cc",
    "//chrome/common/crash_keys.h",
    "//chrome/common/chrome_content_client.cc",
    "//chrome/common/chrome_content_client.h",
    "//chrome/common/chrome_notification_types.h",
    "//chrome/common/chrome_switches.cc",
    "//chrome/common/chrome_switches.h",
    "//chrome/common/url_constants.h",
    "//chrome/common/url_constants.cc",
    "//chrome/common/common_message_generator.cc",
    "//chrome/common/common_message_generator.h",
    "//chrome/common/pref_names.cc",
    "//chrome/common/pref_names.h",
    "//chrome/common/spellcheck_common.cc",
    "//chrome/common/spellcheck_common.h",
    "//chrome/common/spellcheck_messages.h",
    "//chrome/common/spellcheck_result.h",
    "//chrome/renderer/spellchecker/custom_dictionary_engine.cc",
    "//chrome/renderer/spellchecker/custom_dictionary_engine.h",
    "//chrome/renderer/spellchecker/hunspell_engine.cc",
    "//chrome/renderer/spellchecker/hunspell_engine.h",
    "//chrome/renderer/spellchecker/spellcheck.cc",
    "//chrome/renderer/spellchecker/spellcheck.h",
    "//chrome/renderer/spellchecker/spellcheck_language.cc",
    "//chrome/renderer/spellchecker/spellcheck_language.h",
    "//chrome/renderer/spellchecker/spellcheck_provider.cc",
    "//chrome/renderer/spellchecker/spellcheck_provider.h",
    "//chrome/renderer/spellchecker/spellcheck_worditerator.cc",
    "//chrome/renderer/spellchecker/spellcheck_worditerator.h",
    "//chrome/renderer/spellchecker/spelling_engine.h",
    "//chrome/utility/cloud_print/bitmap_image.cc",
    "//chrome/utility/cloud_print/bitmap_image.h",
    "//chrome/utility/cloud_print/pwg_encoder.cc",
    "//chrome/utility/cloud_print/pwg_encoder.h",
    "//chrome/utility/printing_handler.cc",
    "//chrome/utility/printing_handler.h",
    "//chrome/utility/utility_message_handler.h",
  ]

  deps = [
     "//base",
     "//base:i18n",
     "//base/third_party/dynamic_annotations",
     "//components/keyed_service/content",
     "//components/keyed_service/core",
     "//components/pref_registry",
     "//components/printing/browser",
     "//components/printing/common",
     "//components/printing/renderer",
     "//components/user_prefs",
     "//content",
     "//ipc",
     "//net",
     "//pdf",
     "//printing",
     "//skia",
     "//third_party/hunspell",
     "//third_party/icu",
     "//third_party/icu:icuuc",
     "//third_party/WebKit/public:blink",
     "//third_party/adobe/flash:flapper_version_h",
     "//chrome/common:features",
     "//chrome/browser/metrics/variations:chrome_ui_string_overrider_factory",
     "//chrome/app/resources:platform_locale_settings",
     "//chrome:resources",
  ]
}
