# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")

test("mojo_public_application_unittests") {
  sources = [
    "interface_registry_unittest.cc",
  ]

  deps = [
    "//base",
    "//mojo/edk/test:run_all_unittests",
    "//mojo/shell/public/cpp",

    # blpwtk2: Remove test-only code
#    "//testing/gtest",
  ]
}
